{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 53,
  "lineage": "912fdcb2-832d-274c-c152-d645436337f1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "app_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.77.23.247",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-03-28T12:01:13.981-07:00",
            "id": "infra-262912/europe-west1/reddit-app-ip",
            "name": "reddit-app-ip",
            "network_tier": "PREMIUM",
            "project": "infra-262912",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-262912/regions/europe-west1/addresses/reddit-app-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_puma",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9292"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-03-28T12:01:13.959-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-puma-default",
            "name": "allow-puma-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-262912/global/networks/default",
            "priority": 1000,
            "project": "infra-262912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-262912/global/firewalls/allow-puma-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "reddit-app"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-03-28T12:01:13.957-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "default-allow-ssh",
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-262912/global/networks/default",
            "priority": 1000,
            "project": "infra-262912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-262912/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-262912/global/images/reddit-base-1580738741",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-262912/zones/europe-west1-b/disks/reddit-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "reddit-app",
            "instance_id": "8347514626951487505",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDR4luLab5zXmgf69/ZXsrdRShgLQ0W2YpCMoeAgmCAIiOcUsL9VJkWtPQP3I4RBvwgsYOZKr+L7zK3PRwZeR5HcZGYenf2dulDmJmGDe5MGFR1zzOWo7GT4R8qDg+gHNoJR6faMGLGpU8YEFoXkuHtOgFPyqiESNuTMEL5MghTlPkUasCpJwxC/FQGl4Kly4/3Ly9xHND3t2EuMFUON8t9RqTeuH4W7uycU8rAtU+/ZEZWaLCWPTCeDbVAL+77mCkYA6WQxd5zKJayPsKzjfKrN6DVM2aKd8Y/lExingR+opW0BsKS1FloWDDYevIOgR06Ck1Ggi8I0lawfNpvwP4P appuser\n"
            },
            "metadata_fingerprint": "nfAxt2SGdiU=",
            "name": "reddit-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.23.247",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-262912/global/networks/default",
                "network_ip": "10.132.0.25",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-262912/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "infra-262912"
              }
            ],
            "project": "infra-262912",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-262912/zones/europe-west1-b/instances/reddit-app",
            "tags": [
              "reddit-app"
            ],
            "tags_fingerprint": "M-ggixIz-AU=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_address.app_ip"
          ]
        }
      ]
    }
  ]
}